--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "install": "cd server && npm install && cd ../client && npm install",
-    "build": "cd client && npm run build",
-    "render-build": "npm install && npm run build",
-    "seed": "node server/seeds/seed.js",
+    "build": "npx tsc",
+    "start": "node dist/server.js",
+    "watch": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +17,11 @@
     "mongoose": "^8.4.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.8",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
